Refactor build process and enhance local development with new tasks
- Updated Taskfile.yaml to include environment variables for Windows and Docker builds, improving cross-platform compatibility.
- Added new tasks for running GitHub Actions locally using 'act', facilitating easier testing of CI workflows.
- Removed outdated CI configuration files (release.yml, docker-compose.yml, Dockerfile) to streamline the build process and reduce complexity.

These changes optimize the development workflow by enhancing local testing capabilities and simplifying the build configuration.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -37,12 +37,17 @@ tasks:
   build:windows:
     desc: Build for Windows
     deps: [wire:windows]
+    env:
+      GOOS: windows
+      GOARCH: amd64
     cmds:
       - go build -tags "windows nomobile" -o bin/godo.exe cmd/godo/main.go
 
   build:linux:docker:
     desc: Build Linux binary using Docker
     deps: [wire:linux, clean:docker]
+    env:
+      DOCKER_BUILDKIT: 0
     cmds:
       - docker build -f build/Dockerfile.linux -t godo-linux-builder .
       - docker run --name godo-linux-build godo-linux-builder
@@ -59,3 +64,13 @@ tasks:
     deps: [wire:windows]
     cmds:
       - go run cmd/godo/main.go
+
+  act:
+    desc: Run GitHub Actions locally using act
+    cmds:
+      - act -v -j build --container-architecture linux/amd64 --secret GITHUB_TOKEN={{.GITHUB_TOKEN}}
+
+  act:release:
+    desc: Run GitHub Actions release workflow locally
+    cmds:
+      - act -v -j release
