--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -68,7 +68,7 @@ tasks:
   act:
     desc: Run GitHub Actions locally using act
     cmds:
-      - act -v -j build --container-architecture linux/amd64 --secret GITHUB_TOKEN={{.GITHUB_TOKEN}}
+      - act -v -j build -P ubuntu-latest=catthehacker/ubuntu:act-latest
 
   act:release:
     desc: Run GitHub Actions release workflow locally
