Add lint and test tasks to Taskfile.yaml; update GitHub Actions workflow for golangci-lint installation

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -74,3 +74,14 @@ tasks:
     desc: Run GitHub Actions release workflow locally
     cmds:
       - act -v -j release
+
+  lint:
+    desc: Run linters
+    cmds:
+      - golangci-lint run
+      - go fmt ./...
+
+  test:
+    desc: Run tests
+    cmds:
+      - go test -v ./...
