Update Taskfile.yaml to enhance local GitHub Actions testing
- Modified the 'act' command to utilize the GITHUB_TOKEN environment variable for improved security and flexibility during local testing.
- Updated the 'lint' command to run golangci-lint on all packages, ensuring comprehensive linting coverage.

These changes improve the local development experience by streamlining the testing and linting processes.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -68,7 +68,7 @@ tasks:
   act:
     desc: Run GitHub Actions locally using act
     cmds:
-      - act -v -j build -P ubuntu-latest=catthehacker/ubuntu:act-latest
+      - act -s GITHUB_TOKEN="$(gh auth token)" -v -j build -P ubuntu-latest=catthehacker/ubuntu:act-latest
 
   act:release:
     desc: Run GitHub Actions release workflow locally
@@ -78,7 +78,7 @@ tasks:
   lint:
     desc: Run linters
     cmds:
-      - golangci-lint run
+      - golangci-lint run ./...
       - go fmt ./...
 
   test:
