Update golangci-lint configuration and VSCode settings for improved development experience
- Modified .golangci.yml to disable the 'fieldalignment' linter, refining linting settings for better code quality.
- Enhanced .vscode/settings.json to include additional configurations for the Go language server, enabling features like automatic formatting on save, linting, and coverage highlighting.

These changes streamline the development environment, promoting better code quality and a more efficient workflow.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -50,6 +50,7 @@ linters-settings:
     enable-all: true
     disable:
       - shadow
+      - fieldalignment
   depguard:
     rules:
       main:
