Enhance Taskfile.yaml with platform-specific test tasks
- Added separate test tasks for Windows and Linux, allowing for platform-specific test execution.
- Introduced a default test task that dynamically runs tests based on the current operating system.
- Improved organization and clarity in the Taskfile, facilitating easier test management across different environments.

These changes enhance the flexibility and usability of the testing process, ensuring that tests can be run appropriately based on the user's platform.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -85,7 +85,19 @@ tasks:
     cmds:
       - act -v -j release
 
-  test:
-    desc: Run tests
+  test:windows:
+    desc: Run tests on Windows
+    deps: [wire:windows]
     cmds:
       - go test -v ./...
+
+  test:linux:
+    desc: Run tests on Linux
+    deps: [wire:linux]
+    cmds:
+      - go test -v ./...
+
+  test:
+    desc: Run tests for current platform
+    cmds:
+      - task: test:{{.CURRENT_OS}}
