Enhance Taskfile.yaml with new linting tasks for platform-specific execution
- Added platform-specific linting tasks for Windows and Docker, improving code quality checks across environments.
- Introduced a default lint task that dynamically selects the appropriate linting method based on the current operating system.
- Improved organization and clarity in the Taskfile, facilitating easier management of linting processes.

These changes enhance the development workflow by ensuring consistent linting practices tailored to the user's platform.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -101,3 +101,22 @@ tasks:
     desc: Run tests for current platform
     cmds:
       - task: test:{{.CURRENT_OS}}
+
+  lint:docker:
+    desc: Run linters in Linux Docker container
+    deps: [clean:docker]
+    cmds:
+      - docker build -f build/Dockerfile.linux -t godo-linux-builder .
+      - docker run --name godo-linux-build godo-linux-builder golangci-lint run ./...
+      - docker rm godo-linux-build
+
+  lint:
+    desc: Run linters for current platform
+    cmds:
+      - task: lint:{{if eq .CURRENT_OS "windows"}}windows{{else}}docker{{end}}
+
+  lint:windows:
+    desc: Run linters on Windows
+    deps: [fmt]
+    cmds:
+      - golangci-lint run ./...
