Update GitHub workflows and Dependabot configuration
- Added Docker package ecosystem support to Dependabot for weekly updates in the /build directory.
- Enhanced Go workflows by adding 'xvfb' dependency for headless testing and updated test execution to use a new script for running tasks with Xvfb.
- Refactored release workflow to include the new script for building all platforms, ensuring consistent execution across environments.

These changes improve dependency management and streamline the CI/CD process for better testing and building of the application.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -36,7 +36,8 @@ jobs:
           libxinerama-dev \
           libxi-dev \
           libgl1-mesa-dev \
-          libxxf86vm-dev
+          libxxf86vm-dev \
+          xvfb
 
     - name: Install Wire
       run: go install github.com/google/wire/cmd/wire@latest
@@ -56,8 +57,9 @@ jobs:
 
     - name: Run tests and linting
       run: |
-        task lint
-        task test
+        chmod +x build/run-with-xvfb.sh
+        ./build/run-with-xvfb.sh task lint
+        ./build/run-with-xvfb.sh task test
 
     - name: Build all platforms
       run: task build:all
