--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,3 +21,8 @@ updates:
    directory: "/"
    schedule:
      interval: weekly
+
+ - package-ecosystem: "docker"
+   directory: "/build"
+   schedule:
+     interval: weekly
