--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,8 @@ jobs:
             libxinerama-dev \
             libxi-dev \
             libgl1-mesa-dev \
-            libxxf86vm-dev
+            libxxf86vm-dev \
+            xvfb
 
       - name: Install Wire
         run: go install github.com/google/wire/cmd/wire@latest
@@ -56,7 +57,9 @@ jobs:
           wire gen -tags darwin
 
       - name: Build all platforms
-        run: task build:all
+        run: |
+          chmod +x build/run-with-xvfb.sh
+          ./build/run-with-xvfb.sh task build:all
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
