--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,71 +3,145 @@ name: Build and Test
 on: [push, pull_request]
 
 jobs:
-  build:
+  prepare:
     runs-on: ubuntu-latest
-
+    outputs:
+      go-cache-key: ${{ steps.go-cache.outputs.cache-key }}
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - id: go-cache
+        run: echo "cache-key=${{ hashFiles('**/go.sum') }}" >> $GITHUB_OUTPUT
 
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: 1.23
+  lint:
+    needs: prepare
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: 1.23
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-lint-${{ needs.prepare.outputs.go-cache-key }}
+      
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc libayatana-appindicator3-dev libgtk-3-dev xvfb
+          # Only install minimal dependencies needed for linting
+      
+      - name: Install golangci-lint
+        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.55.2
+      
+      - name: Run linting
+        run: |
+          chmod +x build/run-with-xvfb.sh
+          ./build/run-with-xvfb.sh task lint
 
-    - name: Install golangci-lint
-      run: |
-        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.55.2
+  test:
+    needs: prepare
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: 1.23
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-test-${{ needs.prepare.outputs.go-cache-key }}
+      
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            gcc \
+            libayatana-appindicator3-dev \
+            libgtk-3-dev \
+            libx11-dev \
+            libxcb1-dev \
+            libxkbcommon-dev \
+            libxkbcommon-x11-dev \
+            libx11-xcb-dev \
+            libxcursor-dev \
+            libxrandr-dev \
+            libxinerama-dev \
+            libxi-dev \
+            libgl1-mesa-dev \
+            libxxf86vm-dev \
+            xvfb
 
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          gcc \
-          libayatana-appindicator3-dev \
-          libgtk-3-dev \
-          libx11-dev \
-          libxcb1-dev \
-          libxkbcommon-dev \
-          libxkbcommon-x11-dev \
-          libx11-xcb-dev \
-          libxcursor-dev \
-          libxrandr-dev \
-          libxinerama-dev \
-          libxi-dev \
-          libgl1-mesa-dev \
-          libxxf86vm-dev \
-          xvfb
+      - name: Install Wire
+        run: go install github.com/google/wire/cmd/wire@latest
 
-    - name: Install Wire
-      run: go install github.com/google/wire/cmd/wire@latest
+      - name: Install Task
+        uses: arduino/setup-task@v2
+        with:
+          version: 3.x
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Install Task
-      uses: arduino/setup-task@v2
-      with:
-        version: 3.x
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Generate Wire code
+        run: |
+          cd internal/container
+          wire gen -tags linux
+          wire gen -tags windows
+          wire gen -tags darwin
 
-    - name: Generate Wire code
-      run: |
-        cd internal/container
-        wire gen -tags linux
-        wire gen -tags windows
-        wire gen -tags darwin
+      - name: Run tests
+        run: |
+          chmod +x build/run-with-xvfb.sh
+          ./build/run-with-xvfb.sh task test
 
-    - name: Run tests and linting
-      run: |
-        chmod +x build/run-with-xvfb.sh
-        ./build/run-with-xvfb.sh task lint
-        ./build/run-with-xvfb.sh task test
+  build:
+    needs: [prepare, lint, test]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: 1.23
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-build-${{ needs.prepare.outputs.go-cache-key }}
+          restore-keys: |
+            ${{ runner.os }}-go-build-
+            ${{ runner.os }}-go-
+      
+      - name: Install build dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            gcc \
+            libayatana-appindicator3-dev \
+            libgtk-3-dev \
+            libx11-dev \
+            libxcb1-dev \
+            libxkbcommon-dev \
+            libxkbcommon-x11-dev \
+            libx11-xcb-dev \
+            libxcursor-dev \
+            libxrandr-dev \
+            libxinerama-dev \
+            libxi-dev \
+            libgl1-mesa-dev \
+            libxxf86vm-dev \
+            xvfb
 
-    - name: Build all platforms
-      run: task build:all
+      - name: Build all platforms
+        run: task build:all
 
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: binaries
-        path: |
-          bin/godo.exe
-          bin/godo-linux
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: binaries
+          path: |
+            bin/godo.exe
+            bin/godo-linux
