--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,11 +27,16 @@ jobs:
             ~/go/pkg/mod
           key: ${{ runner.os }}-go-lint-${{ needs.prepare.outputs.go-cache-key }}
       
+      - name: Install Task
+        uses: arduino/setup-task@v2
+        with:
+          version: 3.x
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      
       - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y gcc libayatana-appindicator3-dev libgtk-3-dev xvfb
-          # Only install minimal dependencies needed for linting
       
       - name: Install golangci-lint
         run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.55.2
@@ -56,6 +61,12 @@ jobs:
             ~/go/pkg/mod
           key: ${{ runner.os }}-go-test-${{ needs.prepare.outputs.go-cache-key }}
       
+      - name: Install Task
+        uses: arduino/setup-task@v2
+        with:
+          version: 3.x
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Install dependencies
         run: |
           sudo apt-get update
@@ -78,12 +89,6 @@ jobs:
 
       - name: Install Wire
         run: go install github.com/google/wire/cmd/wire@latest
-
-      - name: Install Task
-        uses: arduino/setup-task@v2
-        with:
-          version: 3.x
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Generate Wire code
         run: |
@@ -114,6 +119,12 @@ jobs:
             ${{ runner.os }}-go-build-
             ${{ runner.os }}-go-
       
+      - name: Install Task
+        uses: arduino/setup-task@v2
+        with:
+          version: 3.x
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Install build dependencies
         run: |
           sudo apt-get update
@@ -135,7 +146,9 @@ jobs:
             xvfb
 
       - name: Build all platforms
-        run: task build:all
+        run: |
+          chmod +x build/run-with-xvfb.sh
+          ./build/run-with-xvfb.sh task build:all
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
