Refactor testing tasks and Dockerfile for improved build process
- Updated the Taskfile to introduce a new `test:docker` task for running tests in a Docker container, enhancing test isolation and consistency.
- Modified the existing `test:linux` task to depend on `clean:docker` and streamlined the commands for building and running tests.
- Refactored the Dockerfile to include a dedicated test stage, ensuring that tests are executed in a controlled environment.
- Consolidated cleanup commands in `clean:docker` to remove both build and test containers, improving resource management.

These changes enhance the testing workflow and ensure a more reliable build process across environments.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -93,9 +93,16 @@ tasks:
 
   test:linux:
     desc: Run tests on Linux
-    deps: [wire:linux]
+    deps: [clean:docker]
     cmds:
-      - go test -v ./...
+      - docker build --target test -f build/Dockerfile.linux -t godo-linux-test .
+      - docker run --name godo-linux-test godo-linux-test
+      - docker rm godo-linux-test
+
+  test:docker:
+    deps: [clean:docker]
+    cmds:
+      - docker build --target test -f build/Dockerfile.linux -t godo-linux-test .
 
   test:
     desc: Run tests for current platform
@@ -130,7 +137,5 @@ tasks:
 
   clean:docker:
     cmds:
-      - docker rm -f godo-linux-build 2>nul || true
-      - docker rmi -f godo-linux-lint 2>nul || true
-      - docker rmi -f godo-linux-wire 2>nul || true
-      - docker rmi -f godo-linux 2>nul || true
+      - docker rm -f godo-linux-build godo-linux-test 2>nul || true
+      - docker rmi -f godo-linux-lint godo-linux-test godo-linux-wire godo-linux 2>nul || true
