Update Dockerfile and testing scripts for enhanced headless testing support
- Added dbus and dbus-x11 packages to the Dockerfile to support X11 and dbus integration.
- Modified the run-with-xvfb.sh script to initialize a dbus session, improving compatibility for headless testing.
- Updated the Dockerfile to run tests with the docker build tag, ensuring proper test execution in the Docker environment.
- Adjusted VSCode settings to include 'docker' in the build tags for Go, aligning with the updated testing configuration.

These changes enhance the testing workflow by ensuring reliable execution in headless environments.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "gopls": {
         "buildFlags": [
-            "-tags=wireinject"
+            "-tags=wireinject,docker"
         ]
     },
     "go.lintTool": "golangci-lint",
@@ -31,5 +31,6 @@
         "uncoveredHighlightColor": "rgba(128,64,64,0.25)",
         "coveredGutterStyle": "blockblue",
         "uncoveredGutterStyle": "blockred"
-    }
+    },
+    "go.buildTags": "wireinject,docker"
 }
