--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "gopls": {
         "buildFlags": [
-            "-tags=wireinject,docker"
+            "-tags=wireinject"
         ]
     },
     "go.lintTool": "golangci-lint",
@@ -31,6 +31,5 @@
         "uncoveredHighlightColor": "rgba(128,64,64,0.25)",
         "coveredGutterStyle": "blockblue",
         "uncoveredGutterStyle": "blockred"
-    },
-    "go.buildTags": "wireinject,docker"
+    }
 }
