Update VSCode settings to streamline Go development configuration
- Removed obsolete static analysis options and field alignment settings from the gopls configuration.
- Retained fuzzy matching for improved code analysis while simplifying the overall settings structure.

These changes enhance the development environment for Go, ensuring a cleaner and more efficient configuration.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,11 +5,7 @@
         ],
         "staticcheck": true,
         "completeUnimported": true,
-        "matcher": "fuzzy",
-        "analyses": {
-            "unusedparams": true,
-            "fieldalignment": true
-        }
+        "matcher": "fuzzy"
     },
     "go.formatTool": "goimports",
     "go.lintTool": "golangci-lint",
