Refactor Go module dependencies and enhance application structure
- Removed unused indirect dependencies from go.mod and go.sum to streamline module management.
- Updated VSCode settings to refine Go development configuration, including adjustments to test flags for integration and Docker environments.
- Improved Dockerfile by adding libxi-dev and libxi6 dependencies for enhanced application functionality.
- Refactored main application logic to utilize structured logging with zap, improving error handling and clarity.
- Consolidated hotkey management by introducing a unified HotkeyManager interface, enhancing maintainability and cross-platform compatibility.

These changes optimize the build process, improve code clarity, and enhance the overall development experience.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "gopls": {
         "buildFlags": [
-            "-tags=wireinject"
+            "-tags=wireinject,docker,!docker"
         ],
         "staticcheck": true,
         "completeUnimported": true,
@@ -40,7 +40,6 @@
     },
     "go.testFlags": ["-v"],
     "go.testOnSave": true,
-    "go.testTags": "integration",
-    "go.testTimeout": "5m",
-    "go.testGenerateFlags": ["-all"]
+    "go.testTags": "integration,docker",
+    "go.testTimeout": "5m"
 }
