Refactor Dockerfile and application hotkey management for improved testing and build efficiency
- Updated Dockerfile to streamline dependencies, removing unnecessary packages and enhancing build performance.
- Modified test commands to run Go tests directly within Docker, improving compatibility and efficiency.
- Refactored hotkey management by consolidating the hotkey setup process and removing Docker-specific implementations, ensuring better cross-platform functionality.
- Deleted obsolete test files to clean up the codebase and improve maintainability.

These changes enhance the overall development experience by optimizing the build process and improving the clarity of hotkey management.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -132,7 +132,7 @@ tasks:
     deps: [clean:docker]
     cmds:
       - docker build --target test -f build/Dockerfile.linux -t godo-linux-test .
-      - docker run --name godo-linux-test godo-linux-test
+      - docker run --name godo-linux-test godo-linux-test go test -v -tags=docker ./...
       - docker rm godo-linux-test
 
   # Lint tasks
