Refactor Taskfile, Dockerfile, and VSCode settings for improved build efficiency and cross-platform compatibility
- Updated Taskfile.yaml to clean up multiple Docker containers in a single command, enhancing the cleanup process.
- Modified Dockerfile.linux to include additional dependencies (libx11-dev, libxcursor-dev, libxrandr-dev, libxinerama-dev, libxi-dev, libxxf86vm-dev) for better application functionality.
- Refined VSCode settings.json by consolidating build flags and adding build tags for improved Go development experience.

These changes streamline the build process and enhance the overall development workflow.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
     "gopls": {
-        "buildFlags": [
-            "-tags=wireinject,docker,!docker"
-        ],
+        "buildFlags": ["-tags=wireinject,docker"],
         "staticcheck": true,
         "completeUnimported": true,
         "matcher": "fuzzy"
@@ -41,5 +39,6 @@
     "go.testFlags": ["-v"],
     "go.testOnSave": true,
     "go.testTags": "integration,docker",
-    "go.testTimeout": "5m"
+    "go.testTimeout": "5m",
+    "go.buildTags": "wireinject,docker"
 }
