Refactor application structure and documentation for improved cross-platform compatibility and build processes
- Updated .cursorrules and README.md to reflect the removal of macOS support and the addition of Docker-specific build tags.
- Enhanced Taskfile.yaml to streamline commands for building and testing across platforms, including Docker support.
- Refined Dockerfile.linux to incorporate build tags for better dependency management and testing.
- Cleaned up TODO.md to focus on current development tasks and next steps, emphasizing cross-compilation and release packaging.

These changes enhance the overall development workflow by promoting a more unified approach to task management and improving documentation clarity.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -29,7 +29,7 @@ tasks:
     cmds:
       - |
         {{if eq .GOOS "windows"}}
-        cd internal/container; if (Test-Path *_wire_gen.go) { Remove-Item *_wire_gen.go }
+        powershell -Command "cd internal/container; Remove-Item -ErrorAction SilentlyContinue *_wire_gen.go"
         {{else}}
         cd internal/container && rm -f *_wire_gen.go || true
         {{end}}
@@ -61,7 +61,6 @@ tasks:
 
   wire:linux:docker:
     desc: Generate wire code for Linux in Docker
-    internal: true
     deps: [clean:docker]
     cmds:
       - docker build --target wire -f build/Dockerfile.linux -t godo-linux-wire .
@@ -88,11 +87,10 @@ tasks:
 
   build:linux:docker:
     desc: Build Linux binary using Docker
-    internal: true
     deps: [wire:linux:docker, clean:docker]
     cmds:
-      - docker build -f build/Dockerfile.linux -t godo-linux-builder .
-      - docker run --name godo-linux-build godo-linux-builder
+      - docker build --target builder -f build/Dockerfile.linux -t godo-linux-builder .
+      - docker create --name godo-linux-build godo-linux-builder
       - docker cp godo-linux-build:/app/bin/godo-linux ./bin/
       - docker rm godo-linux-build
 
