--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,18 +33,8 @@ jobs:
           version: 3.x
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc libayatana-appindicator3-dev libgtk-3-dev xvfb
-      
-      - name: Install golangci-lint
-        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.55.2
-      
       - name: Run linting
-        run: |
-          chmod +x build/run-with-xvfb.sh
-          ./build/run-with-xvfb.sh task lint
+        run: task lint:linux:docker
 
   test:
     needs: prepare
@@ -67,39 +57,8 @@ jobs:
           version: 3.x
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            gcc \
-            libayatana-appindicator3-dev \
-            libgtk-3-dev \
-            libx11-dev \
-            libxcb1-dev \
-            libxkbcommon-dev \
-            libxkbcommon-x11-dev \
-            libx11-xcb-dev \
-            libxcursor-dev \
-            libxrandr-dev \
-            libxinerama-dev \
-            libxi-dev \
-            libgl1-mesa-dev \
-            libxxf86vm-dev \
-            xvfb
-
-      - name: Install Wire
-        run: go install github.com/google/wire/cmd/wire@latest
-
-      - name: Generate Wire code
-        run: |
-          cd internal/container
-          wire gen -tags linux
-          wire gen -tags windows
-
       - name: Run tests
-        run: |
-          chmod +x build/run-with-xvfb.sh
-          ./build/run-with-xvfb.sh task test
+        run: task test:linux:docker
 
   build:
     needs: [prepare, lint, test]
@@ -118,37 +77,18 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-build-
             ${{ runner.os }}-go-
-      
+
       - name: Install Task
         uses: arduino/setup-task@v2
         with:
           version: 3.x
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install build dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            gcc \
-            libayatana-appindicator3-dev \
-            libgtk-3-dev \
-            libx11-dev \
-            libxcb1-dev \
-            libxkbcommon-dev \
-            libxkbcommon-x11-dev \
-            libx11-xcb-dev \
-            libxcursor-dev \
-            libxrandr-dev \
-            libxinerama-dev \
-            libxi-dev \
-            libgl1-mesa-dev \
-            libxxf86vm-dev \
-            xvfb
+      - name: Build Linux binary
+        run: task build:linux:docker
 
-      - name: Build all platforms
-        run: |
-          chmod +x build/run-with-xvfb.sh
-          ./build/run-with-xvfb.sh task build:all
+      - name: Build Windows binary
+        run: task build:windows
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
