--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,45 +36,25 @@ jobs:
             ~/go/pkg/mod
           key: ${{ runner.os }}-go-release-${{ needs.prepare.outputs.go-cache-key }}
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            gcc \
-            libayatana-appindicator3-dev \
-            libgtk-3-dev \
-            libx11-dev \
-            libxcb1-dev \
-            libxkbcommon-dev \
-            libxkbcommon-x11-dev \
-            libx11-xcb-dev \
-            libxcursor-dev \
-            libxrandr-dev \
-            libxinerama-dev \
-            libxi-dev \
-            libgl1-mesa-dev \
-            libxxf86vm-dev \
-            xvfb
-
-      - name: Install Wire
-        run: go install github.com/google/wire/cmd/wire@latest
-
       - name: Install Task
         uses: arduino/setup-task@v2
         with:
           version: 3.x
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Generate Wire code
-        run: |
-          cd internal/container
-          wire gen -tags linux
-          wire gen -tags windows
+      - name: Build Linux binary
+        run: task build:linux:docker
 
-      - name: Build all platforms
-        run: |
-          chmod +x build/run-with-xvfb.sh
-          ./build/run-with-xvfb.sh task build:all
+      - name: Build Windows binary
+        run: task build:windows
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: binaries
+          path: |
+            bin/godo.exe
+            bin/godo-linux
 
   release:
     needs: [prepare, build]
