--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -122,12 +122,11 @@ tasks:
       - go test -v ./...
 
   test:linux:docker:
-    desc: Run tests on Linux using Docker
-    internal: true
+    desc: Run tests in Linux Docker container
     deps: [clean:docker]
     cmds:
       - docker build --target test -f build/Dockerfile.linux -t godo-linux-test .
-      - docker run --name godo-linux-test godo-linux-test go test -v -tags=docker ./...
+      - docker run --name godo-linux-test godo-linux-test
       - docker rm godo-linux-test
 
   # Lint tasks
